ingress_nginx/ingress_dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  name: longhorn-frontend
  namespace: longhorn-storage
spec:
  ingressClassName: nginx
  rules:
  - host: "www.trourset186.online"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
